<resources>
    <string name="app_name">Calorie Counter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_my_app">MyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calories">%1$d kcal</string>
    <string name="current_water">(%1$d ml)</string>
    <string name="num_water">%1$d glasses of water</string>
    <string name="calories_consumed">You have consumed %1$d Kcal</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_bottle_image">Water Bottle Image</string>
    <string name="todays_stats">Today\'s Stats</string>
    <string name="prompt_username">Username</string>
    <string name="error_message_username">Invalid username</string>
    <string name="error_message_password">Enter valid password</string>
    <string name="error_invalid_email_password">Please enter a valid username and email</string>
    <string name="error_message_confirm_password">The two passwords do not match</string>
    <string name="error_message_email">Enter a valid email</string>
    <string name="account_made">Your account has been registered</string>
    <string name="error_email_exists">We already have a user with that email</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="nothing"> </string>
    <string name="favourite">You have %1$d favourites</string>

    <string name="database">https://cob155-coursework-default-rtdb.europe-west1.firebasedatabase.app/</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>